# openwrt-slide-switch

./: .editorconfig  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS.md  README  README.md  bootstrap  configure.ac  rules.mk
etc/hotplug.d/button/: 50-slide-switch
etc/init.d/: Makefile.am  slide-switch
src/etc/hotplug.d/button/: 50-slide-switch.cut.in  50-slide-switch.in  50-slide-switch.sh-cut  50-slide-switch.sh-cut.in  Makefile.am  check-shell-syntax
src/etc/init.d/: Makefile.am  check-shell-syntax  slide-switch.cut.in  slide-switch.in  slide-switch.sh-cut  slide-switch.sh-cut.in  zzz-slide-switch-update.sh-cut  zzz-slide-switch.sh-cut  zzz-slide-switch.sh-cut.in
src/usr/lib.ar71xx/: Makefile.am  ar71xx.json-cut  check-json-syntax  check-shell-syntax  platform.sh  platform.sh-cut  platform.sh.cut
src/usr/lib.ramips/: Makefile.am  check-json-syntax  check-shell-syntax  platform.sh  platform.sh-cut  platform.sh.cut  ramips.json-cut
src/usr/sbin/: Makefile.am  check-shell-syntax  slide-switch.cut.in  slide-switch.in  slide-switch.sh-cut  slide-switch.sh-cut.in
src/usr/share/slide-switch/: Makefile.am  check-json-syntax  check-shell-syntax  functions.sh-cut  functions.sh-cut.in  functions.sh.cut.in  switch-data.json-cut
usr/lib/slide-switch/: functions.sh
usr/sbin/: slide-switch
usr/share/slide-switch/: Makefile.am  functions.sh.in
